Adjust grid margins

--- a/client/src/styles/components/_foods.scss
+++ b/client/src/styles/components/_foods.scss
@@ -1,8 +1,12 @@
 .foods {
 
+  li {
+    margin: 5px;
+  }
+
   .food {
-    width: 22em;
-    height: 12em;
+    width: 20em;
+    height: 10em;
     padding: 2px 5px;
     background-color: $yellow;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
