--- a/client/public/main.css
+++ b/client/public/main.css
@@ -54,9 +54,12 @@
       align-self: center;
       justify-self: left; }
 
+.foods li {
+  margin: 5px; }
+
 .foods .food {
-  width: 22em;
-  height: 12em;
+  width: 20em;
+  height: 10em;
   padding: 2px 5px;
   background-color: #F9C343;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
