--- a/client/public/main.css
+++ b/client/public/main.css
@@ -54,40 +54,38 @@
       align-self: center;
       justify-self: left; }
 
-.foods li {
-  margin: 5px; }
-
-.foods .food {
-  width: 20em;
-  height: 10em;
-  padding: 2px 5px;
-  background-color: #F9C343;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  color: #1A1A1A; }
-  .foods .food .foodName {
-    font-weight: 700;
-    padding: 5px; }
-  .foods .food .nutrient {
-    display: inline-block;
-    margin: 5px;
-    text-align: center;
-    font-family: "Neuton", serif;
-    font-size: 12px; }
-    .foods .food .nutrient img {
-      width: 2em; }
-  .foods .food:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
-
 .foods .fa-arrow-circle-up {
   font-size: 2em;
   color: #229DD6; }
 
+.foods li {
+  margin: 5px;
+  list-style: none; }
+  .foods li .food {
+    width: 20em;
+    height: 10em;
+    padding: 2px 5px;
+    background-color: #F9C343;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    color: #1A1A1A; }
+    .foods li .food .foodName {
+      font-weight: 700;
+      padding: 5px; }
+    .foods li .food .nutrient {
+      display: inline-block;
+      margin: 5px;
+      text-align: center;
+      font-family: "Neuton", serif;
+      font-size: 12px; }
+      .foods li .food .nutrient img {
+        width: 2em; }
+    .foods li .food:hover {
+      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
+
 .app {
   font-family: "Nunito", sans-serif;
   color: #1A1A1A; }
-  .app li {
-    list-style: none; }
   .app .pulsate {
     -webkit-transition: all .3s ease;
     /* Safari and Chrome */
@@ -111,15 +109,7 @@
       -o-transform: translatZ(0) scale(1.2);
       /* Opera */
       transform: translatZ(0) scale(1.2); }
-  .app .steps {
-    font-family: "Neuton", serif;
-    color: #1A1A1A; }
-
-.search .matches {
-  font-weight: 400;
-  font-size: 16px; }
 
 .search .searchIcon {
   font-size: 2em;
-  color: #229DD6;
-  cursor: pointer; }
+  color: #229DD6; }
